# linear_algebra

./: .codecov.yml  .gitignore  CMakeLists.txt  NOTES.md  README.md  TODO.md  codecov.yml
.github/: labeler.yml
.github/workflows/: osx.yml  ubuntu.yml  windows.yml
include/: linear_algebra  linear_algebra.h
include/bits/linear_algebra/: addition_traits.h  arithmetic_operators.h  base.h  column_engine.h  concepts.h  convenience_aliases.h  defs.h  dr_matrix_engine.h  dr_vector_engine.h  ext.h  ext_det.h  ext_permutation.h  fs_matrix_engine.h  fs_vector_engine.h  fwd.h  iterators.h  matrix.h  multiplication_traits.h  negation_traits.h  operation_traits.h  operation_traits_selector.h  row_engine.h  scalar_engine.h  submatrix_engine.h  subtraction_traits.h  support.h  transpose_engine.h  vector.h
include/math/: engine_types.h  linear_algebra  linear_algebra.h  math_object_types.h  synopsis.h
test/: add.cpp  custom_engine.cpp  custom_number.cpp  custom_operations.cpp  dr_matrix.cpp  dr_vector.cpp  ext.cpp  linear_algebra_test.cpp  llsparse_matrix_engine.h  matrix_obj.cpp  mul.cpp  neg.cpp  sub.cpp  support.h  test_main.cpp  vector.cpp  wrapped_number.h
